[project]
name = "lolc"
version = "0.0.0"
description = "Prototype for an interpreter."
authors = [
    "David Chu <thedavidchu@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/thedavidchu/lolc/"
repository = "https://github.com/thedavidchu/lolc/"
documentation = "https://github.com/thedavidchu/lolc/"

# Requirements
[dependencies]

[dev-dependencies]
black = { version = "^22.3.0", python = "^3.10" }

[tool.black]
line-length = 80
target-version = ['py310']
exclude = '''
(
    /(
          \.github
        | \.git
        | \.venv
        | \.vscode
        | _actions
        | third-party
    )/
)
'''
